--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,11 @@
 <body>
     <h1> Hello World!!</h1>
     <p>Welcome to Web Development</p>
+    <form action="process-form" method="get">
+        <input type="text" name="num1">
+        <input type="text" name="num2">
+        <button type="submit">Submit</button>
+
+    </form>
 </body>
 </html>
