--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> Hello World!!</h1>
     <p>Welcome to Web Development</p>
-    <form action="process-form" method="get">
+    <form action="process-form" method="post">
         <input type="text" name="num1">
         <input type="text" name="num2">
         <button type="submit">Submit</button>
